2nd tab: Added basic interaction between the energy producers, consumers, and users.
Backed out the changes that were made for the fast prototype of Heat Capacity Lab.
# 0.00.16 (66383) Jul 27, 2012
7/27/12 Publishing dev version for testing.
2nd tab: Added the ability to activate and deactivate elements of the energy systems as they move into or out of the 'focus' location on the carousel.
2nd tab: Added working faucet.
1st tab: Changed the burner to explicitly indicate when heating and cooling are disallowed by modifying the slider on the heater/cooler.
# 0.00.15 (66196) Jul 24, 2012
7/24/12 Publishing some fixes for the Heat Capacity Lab prototype.
Added a fix for an issue where blocks and beakers could be made to overlap if the user dropped the block on the edge of the burner.
# 0.00.14 (66155) Jul 23, 2012
7/23/12 Publishing prototype version of Heat Capacity Lab to dev for potential interviews.
# 0.00.13 (65960) Jul 17, 2012
7/17/12 Deploying a snapshot to dev with initial UI for the 2nd tab.
2nd tab: Added the various energy sources, converters, and users.
2nd tab: Added initial version of energy chunk legend.
2nd tab: Added check box for controlling energy chunk visibility.
2nd tab: Added clock control panel.
Added back the 2nd tab, removed static picture.
# 0.00.12 (65717) Jul 10, 2012
7/10/12 Deploying to dev for review and possible interviews prior to turning other (unfinished) tabs on.
Added developer dialog for setting the heat transfer constants.
Fixed some cases where changing the burner back and forth from heating to cooling a number of times could lead to null pointer exceptions.
Fixed an issue where energy chunks coming from the air wouldn't follow the thermal object if it was moved.
# 0.00.11 (65551) Jun 28, 2012
6/28/12 Publishing version to dev with only first tab for use in early interviews.
# 0.00.10 (65547) Jun 28, 2012
6/28/12 Snapshot for review.
Made the triangle of the thermometer change color based on what is being measured.